Adding bpy.ops.outliner.orphans_purge() to the QuickMenu leaves it inaccessible, because poll() prevents it from being run #74009

Closed
opened 2020-02-19 16:32:55 +01:00 by MACHIN3 · 5 comments

System Information
Operating system: Linux-4.13.10-041310-generic-x86_64-with-debian-stretch-sid 64 Bits
Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.67

Blender Version
Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: 77d23b0bd7

Short description of error
The "Purge All" operator, added to the File - Cleanup menu for 2.82, can't be run when added to the Quick Menu, probably due to the wrong context.
But why does it work from the File menu itself then?

I have the same problem adding the operator to a custom pie menu - it's greyed out and can't be run. Running it from a custom operator throws the an "incorrect context" error, even when run with a context override changing the area.type to OUTLINER.

Exact steps for others to reproduce the error

  • add Purge All from the File - Clean Up menu to the Quick menu
  • try running it from the Quick menu
**System Information** Operating system: Linux-4.13.10-041310-generic-x86_64-with-debian-stretch-sid 64 Bits Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.67 **Blender Version** Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: `77d23b0bd7` **Short description of error** The "Purge All" operator, added to the File - Cleanup menu for 2.82, can't be run when added to the Quick Menu, probably due to the wrong context. But why does it work from the File menu itself then? I have the same problem adding the operator to a custom pie menu - it's greyed out and can't be run. Running it from a custom operator throws the an "incorrect context" error, even when run with a context override changing the area.type to OUTLINER. **Exact steps for others to reproduce the error** * add Purge All from the File - Clean Up menu to the Quick menu * try running it from the Quick menu
Author

Added subscriber: @MACHIN3

Added subscriber: @MACHIN3

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2020-02-19 17:07:49 +01:00

yeah, poll function of that operator is weirdly restrictive, will fix that.

yeah, poll function of that operator is weirdly restrictive, will fix that.

This issue was referenced by d772c6ea31

This issue was referenced by d772c6ea315c5c34524aa3283ddc17eaf660798c

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74009
No description provided.