Fix T74009: `bpy.ops.outliner.orphans_purge()` poll being too restrictive.

There is no reason to even require an editor at all here, for now just
kept the 'orphan view needed' condition for the outliner case only.